<resources>
    <string name="app_name">HomeFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">homefitnow.net</string>
    <string name="nav_header_subtitle">homefitnow@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cat">cat</string>
    <string name="menu_home">Главная</string>
    <string name="menu_report">Отчет</string>
    <string name="menu_Profile">Профиль</string>
    <string name="menu_pass">Подписка</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_about">О программе </string>
    <string name="error_coonnect">Нет соединения</string>
    <string name="error_coonnect2">Интернет соединение отсутствует  </string>
    <string name="error_coonnect3">Что то пошло не так Проверьте подключение к интернету</string>
    <string name="channel_name">homeWorkChanel</string>
    <string name="default_notification_channel_id">HomeWork</string>
</resources>