<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/menu_Profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_Profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_pass"
            android:title="@string/menu_pass" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_action_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/menu_about" />
    </group>
</menu>