<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hardcoding.homework.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_Profile"
        android:name="com.hardcoding.homework.ui.profile.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hardcoding.homework.ui.pass.GalleryFragment"
        android:label="@string/menu_pass"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.hardcoding.homework.ui.help.SlideshowFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/menu_about"
        android:name="com.hardcoding.homework.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>